--- a/_config.yml
+++ b/_config.yml
@@ -37,9 +37,9 @@ author:
   impactstory      : # URL
   orcid            : "https://orcid.org/0009-0006-5540-1831"
   semantic         : # URL
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   researchgate     : "https://www.researchgate.net/profile/Pankaj-Kumar-535?ev=hdr_xprf"
-  scopus           : # URL
+  scopus           : "https://www.scopus.com/authid/detail.uri?authorId=59546569900"
 
   # Repositories and software development
   bitbucket        : # Username - Update with your username on the site
